force-app/main/default/objects/PF_Deployment__c/PF_Deployment__c.object-meta.xml
<CustomObject>
    <description>This will contain all the components for deployment per sprint.</description>
    <label>Deployment Component</label>
    <nameField>
        <label>Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>