force-app/main/default/objects/PF_Deployment__c/fields/PF_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Component_Type__c</fullName>
    <inlineHelpText>Select component Type for the component.</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AccountCriteriaSharingRule</fullName>
            </value>
            <value>
                <fullName>AccountOwnerSharingRule</fullName>
            </value>
            <value>
                <fullName>AccountSharingRules</fullName>
            </value>
            <value>
                <fullName>AnalyticSnapshot</fullName>
            </value>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
            </value>
            <value>
                <fullName>ApexPage</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>ApprovalProcesses</fullName>
            </value>
            <value>
                <fullName>BusinessProcess</fullName>
            </value>
            <value>
                <fullName>CampaignCriteriaBaseSharingRule</fullName>
            </value>
            <value>
                <fullName>CampaignOwnerSharingRule</fullName>
            </value>
            <value>
                <fullName>CampaignSharingRules</fullName>
            </value>
            <value>
                <fullName>CaseCriteriaBasedSharingRule</fullName>
            </value>
            <value>
                <fullName>CaseOwnerSharingRule</fullName>
            </value>
            <value>
                <fullName>CaseSharingRules</fullName>
            </value>
            <value>
                <fullName>ContactCriteriaBasedSharingRule</fullName>
            </value>
            <value>
                <fullName>ContactOwnerSharingRule</fullName>
            </value>
            <value>
                <fullName>ContactSharingRules</fullName>
            </value>
            <value>
                <fullName>CustomApplication</fullName>
            </value>
            <value>
                <fullName>CustomField</fullName>
            </value>
            <value>
                <fullName>CustomLabel</fullName>
            </value>
            <value>
                <fullName>CustomLabels</fullName>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>CustomObjectCriteriaBasedSharingRule</fullName>
            </value>
            <value>
                <fullName>CustomObjectOwnerSharingRule</fullName>
            </value>
            <value>
                <fullName>CustomObjectSharingRules</fullName>
            </value>
            <value>
                <fullName>CustomObjectTranslation</fullName>
            </value>
            <value>
                <fullName>CustomPageWebLink</fullName>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>