force-app/main/default/objects/PF_Deployment__c/fields/PF_Defect__c.field-meta.xml
<CustomField>
    <fullName>PF_Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select related defect (if component needs to deploy against defect).</inlineHelpText>
    <label>Defect</label>
    <referenceTo>PF_Defects__c</referenceTo>
    <relationshipLabel>Deployment Components</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>