force-app/main/default/objects/PF_Deployment__c/fields/PF_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Description__c</fullName>
    <inlineHelpText>Provide description/notes for this component</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>