force-app/main/default/objects/PF_Deployment__c/fields/PF_Requestor__c.field-meta.xml
<CustomField>
    <fullName>PF_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>