force-app/main/default/objects/PF_Deployment__c/fields/PF_Story__c.field-meta.xml
<CustomField>
    <fullName>PF_Story__c</fullName>
    <inlineHelpText>Story through which this compoent is related.</inlineHelpText>
    <label>Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>Deployment Components</relationshipLabel>
    <relationshipName>Deployment_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>