force-app/main/default/objects/PF_Deployment__c/fields/PF_Work_Task__c.field-meta.xml
<CustomField>
    <fullName>PF_Work_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Worktask through which this component is related.</inlineHelpText>
    <label>Work Task</label>
    <referenceTo>PF_Tasks__c</referenceTo>
    <relationshipLabel>Deployment Components</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>