force-app/main/default/objects/PF_Deployment__c/recordTypes/PF_Deployment_Component.recordType-meta.xml
<RecordType>
    <fullName>PF_Deployment_Component</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Deployment Component</label>
</RecordType>